local-display-factory: restart greeter session when crashed

When active vt is gdm initial vt, restart greeter session. Avoiding
the blank screen when greeter session crashed.

https://gitlab.gnome.org/GNOME/gdm/-/issues/735